integration tests: added first interface test; added main interface feature;
- the test is implemented in cpp and java
- it tests a static constructor and a simple
  method with primitive parameters and a return value
- refactored java default loader to feature an explicit
  function call.
- interfaces can now be marked `main`, which means that the
  interface itself is taking care of the library inititalization.
  No more explicit init calls needed! :)

--- a/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
@@ -1,8 +1,10 @@
 {% extends "base.jinja2" %}
-{% from "macros.jinja2" import comment %}
+{% from "macros.jinja2" import comment, return_type, attributes %}
 
 {% block header %}
 #pragma once
+
+#include <memory>
 {% endblock %}
 
 {% block content %}
@@ -16,7 +18,7 @@ public:
 {%- endfor %}
 {% for method in type_def.methods %}
     {{ comment(method) }}
-    {{ "static" if method.static else "virtual" }} {{ method.return_type_ref.type_def.cpp.typename if method.return_type_ref else "void" }} {{ method.cpp.name }}(
+    {{ attributes(method) }} {{ return_type(method) }} {{ method.cpp.name }}(
     {%- for parameter in method.parameters -%}
         const {{ parameter.type_ref.type_def.cpp.typename }}& {{ parameter.cpp.name ~ (", " if not loop.last) }}
     {%- endfor -%}
