--- a/src/pydjinni/generator/java/jni/templates/source/interface.cpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/source/interface.cpp.jinja2
@@ -7,6 +7,10 @@
 {% endfor %}
 {% endblock %}
 
+{% macro return_type(method) %}
+{{ method.return_type_ref.type_def.jni.typename.value if method.return_type_ref else "void" }}
+{% endmacro %}
+
 {% block content %}
 {{ type_def.jni.name }}::{{ type_def.jni.name }}() : ::pydjinni::JniInterface<{{ type_def.cpp.typename }}, {{ type_def.jni.name }}>("{{ type_def.jni.type_signature }}") {}
 {{ type_def.jni.name }}::~{{ type_def.jni.name }}() = default;
@@ -19,7 +23,7 @@ CJNIEXPORT void JNICALL {{ type_def.jni.jni_prefix }}_nativeDestroy(JNIEnv* jniE
 }
 
 {% for method in type_def.methods %}
-CJNIEXPORT {{ method.return_type_ref.type_def.jni.typename.value if method.return_type_ref else "void" }} JNICALL {{ type_def.jni.jni_prefix }}_{{ method.jni.jni_name }}(JNIEnv* jniEnv, jobject /*this*/{{ ", jlong nativeRef" if not method.static }}
+CJNIEXPORT {{ return_type(method) }} JNICALL {{ type_def.jni.jni_prefix }}_{{ "native_1" if not method.static }}{{ method.jni.jni_name }}(JNIEnv* jniEnv, jobject /*this*/{{ ", jlong nativeRef" if not method.static }}
     {%- for parameter in method.parameters -%}
     , {{ parameter.type_ref.type_def.jni.typename.value }} {{ parameter.jni.name }}
     {%- endfor -%}
