--- a/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
@@ -20,7 +20,11 @@ public:
     {{ comment(method) }}
     {{ attributes(method) }} {{ return_type(method) }} {{ method.cpp.name }}(
     {%- for parameter in method.parameters -%}
-        const {{ parameter.type_ref.type_def.cpp.typename }}& {{ parameter.cpp.name ~ (", " if not loop.last) }}
+        {%- if parameter.type_ref.type_def.cpp.by_value -%}
+            {{ parameter.type_ref.type_def.cpp.typename }} {{ parameter.cpp.name ~ (", " if not loop.last) }}
+        {%- else -%}
+            const {{ parameter.type_ref.type_def.cpp.typename }}& {{ parameter.cpp.name ~ (", " if not loop.last) }}
+        {%- endif -%}
     {%- endfor -%}
     ){{ " = 0" if not method.static }};
 {% endfor %}
