add all existing integration tests for Objective-C
- fixed lots of code generation issues with objc
- renamed integration tests for cpp, java, objc to
  follow a common naming schema (<lang>.testcase)
- added objc integration tests for enum, flags, record, interface

TODO:code refactoring is looong overdue!!!!

--- a/src/pydjinni/generator/objc/objc/templates/header/enum.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/enum.h.jinja2
@@ -8,7 +8,7 @@ typedef NS_ENUM(NSUInteger, {{ type_def.objc.typename }}) {
     {% if item.comment %}
     {{ item.objc.comment | indent(4) }}
     {% endif %}
-    {{ item.objc.name ~ ("," if not loop.last) }}
+    {{ type_def.objc.typename ~ item.objc.name ~ ("," if not loop.last) }}
 {% endfor %}
 };
 {% endblock %}
