--- a/src/pydjinni/generator/objc/objcpp/templates/base.jinja2
+++ b/src/pydjinni/generator/objc/objcpp/templates/base.jinja2
@@ -4,6 +4,9 @@
 {% block header %}
 {% endblock %}
 
+{% block no_namespace %}
+{% endblock %}
+
 {% if type_def.objcpp.namespace -%}
 namespace {{ type_def.objcpp.namespace }} {
 {% endif %}
