--- a/src/pydjinni/generator/objc/objc/templates/header/record.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/record.h.jinja2
@@ -1,4 +1,5 @@
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import constant_declaration %}
 
 {% block header %}
 {% for dependency in type_def.dependencies -%}
@@ -25,4 +26,9 @@ NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
 @property (nonatomic, readonly) {{ field.type_ref.type_def.objc.typename }} {{ field.objc.name }};
 {% endfor %}
 @end
+
+{% for constant in type_def.constants -%}
+{{ constant_declaration(type_def, constant) }}
+{%- endfor %}
+
 {% endblock %}
