add support for more datatypes + some refactoring
- bool, int, long, float, double, string was added
- integration tests are extended to test record with all the new datatypes
- separated marshalling from parsing
- no special treatment for enum types in objcpp

--- a/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
@@ -3,8 +3,8 @@
 
 {% block header %}
 {% endblock %}
-{% for dependency in type_def.dependencies -%}
-#include {{ dependency.cpp.header | header }}
+{% for header in type_def.dependencies | headers('cpp') -%}
+#include {{ header }}
 {% endfor %}
 
 {%- if type_def.cpp.namespace -%}
