--- a/src/pydjinni/generator/java/java/templates/macros.jinja2
+++ b/src/pydjinni/generator/java/java/templates/macros.jinja2
@@ -6,8 +6,8 @@
 
 {% macro value_def(value, type_def) %}
 {%- if value is string -%}"{{ value }}"
-{%- elif value is number %}{{ value }}
 {%- elif value is boolean %}{{ "true" if value else "false" }}
+{%- elif value is number %}{{ value ~ ("f" if type_def.primitive.value == "float") }}
 {%- else %}new {{ type_def.java.typename }}(
 {%- for field in type_def.fields -%}
     {{ value_def(value.assignments[field.name].value, field.type_ref.type_def) ~ (", " if not loop.last) }}
