--- a/src/pydjinni/generator/java/jni/templates/header/flags.hpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/header/flags.hpp.jinja2
@@ -4,8 +4,8 @@
 #pragma once
 
 #include "pydjinni/jni/support.hpp"
-{% for include in type_def.jni.includes -%}
-#include "{{ include | header }}"
+{% for header in type_def.dependencies | headers('jni') -%}
+#include {{ header }}
 {% endfor -%}
 {% endblock %}
 
